# best-of-n-memory-augmented-world-models

./: .gitignore  README.md  pyproject.toml
docs/: BEST_OF_N_MEMORY_AUGMENTED_WORLD_MODELS_V2_REVIEW_AUDIT.md  BEST_OF_N_MEMORY_AUGMENTED_WORLD_MODELS_V3_REVIEW_AUDIT.md  BEST_OF_N_MEMORY_AUGMENTED_WORLD_MODELS_V4_REVIEW_AUDIT.md  final_audit.md  hostile_prior_work.md  literature_map.md  novelty_decision.md  related_work_matrix.csv
experiments/: 18_v3_cached_evidence.py  18_v4_protocol_evidence.py  19_v4_gymnasium_memory_benchmarks.py  20_v4_toytext_memory_benchmarks.py  run_synthetic.py
paper/: main.tex  references.bib  results_macros.tex  v3_results_macros.tex  v4_gym_macros.tex  v4_results_macros.tex  v4_toytext_macros.tex
paper/final/: best-of-n-memory-augmented-world-models-v4-manifest.json
results/smoke/: raw_rollouts.csv  summary.csv
results/v3_cached_evidence/: bootstrap_ci.csv  budget_delta.csv  summary.json
results/v4_base/: raw_rollouts.csv  summary.csv
results/v4_gymnasium_memory/: benchmark_effects.csv  candidate_records.csv  selection_curves.csv  summary.json
results/v4_protocol_evidence/: harm_rates.csv  max_budget_strategy_table.csv  risk_correlations.csv
results/v4_toytext_memory/: benchmark_effects.csv  candidate_records.csv  selection_curves.csv  summary.json
scripts/: build_literature.py  build_paper.py  run_v3_claim_audit.py  run_v4_claim_audit.py
src/memory_bon_world_models/: __init__.py  environment.py  experiment.py  (+4 more)
tests/: test_best_of_n_scaling.py  test_paper_assets.py  test_reproducibility.py  test_retrieval_and_models.py
